            * FormDialog:
                - Form submit error responses with HTML can either replace the default overlay content or the frame content.
                - New creme.dialog.Frame option 'fillOnError'; if enabled the html error response replaces the content.
                - New creme.dialog.Dialog option 'fillFrameOnError'; if enabled the html error response replaces the content.

    Breaking changes :
    ------------------
        # Deprecated stuffs which have been removed :
            - In 'creme_core.gui' :
                - In 'field_printers', the function 'image_size()' & the constants MAX_HEIGHT/MAX_WIDTH has been removed.
                - In the class 'mass_import.FormRegistry' :
                    - The methods 'get()' & 'is_registered()' have been removed.
                    - The class 'UnregisteredCTypeException' has been removed.
            - In 'creme_core.models' :
                - In the methods 'HeaderFilter.can_view()' & 'creme_core.models.EntityFilter.can_view()',
                  the argument "content_type" has been removed.
                - Setting the class attribute 'HistoryLine.ENABLED' is now useless.
                  The method 'HistoryLine.disable()' has been removed.
            - The function 'creme_core.utils.create_if_needed()' has been removed.
            - The constant 'creme_core.core.entity_filter.EF_USER' has been removed.
            - In the class-view 'creme_core.views.entity_filter.EntityFilterDeletion',
              the ID of the EntityFilter cannot be passed in the POST data anymore.
            - In 'creme_core.templatetags' :
                - The templatetag {% has_perm_to %} has been removed.
                - The templatetag {% menu_buttons_display %} (from the library "creme_menu") has been removed.
            - The function 'creme_core.utils.bool_from_str()' has been removed.
            - In 'creme_core.tests' :
                - The module 'forms.base' has been removed.